--- a/client/src/PortfolioContainer/Resume/Resume.css
+++ b/client/src/PortfolioContainer/Resume/Resume.css
@@ -9,7 +9,7 @@
   
   .resume-card {
     display: flex;
-    height: 363px;
+    height: 370px;
     width: 1000px;
     /* margin: 80px 0; */
   }
@@ -28,6 +28,11 @@
   }
   
   .experience-description {
+    margin: 10px 0 0 0;
+    text-align: justify;
+  }
+
+  .skills-description {
     margin: 10px 0 0 0;
     text-align: justify;
   }
@@ -95,7 +100,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    height: 360px;
+    height: 350px;
     width: 100%;
   }
   
@@ -117,6 +122,10 @@
   }
   
   .experience-description {
+    max-width: 100%;
+  }
+
+  .skills-description {
     max-width: 100%;
   }
   
@@ -185,7 +194,6 @@
     color: #04C3FF;
   }
   
-  /* IPAD PRO RESPONSIVENESS */
   @media only screen and (max-width: 1110px) {
     .resume-card {
       width: 880px;
@@ -196,7 +204,6 @@
     }
   }
   
-  /* IPAD RESPONSIVENESS */
   @media only screen and (max-width: 1023px) {
     .resume-content {
       display: flex;
@@ -231,4 +238,70 @@
     .selected-bullet {
       width: 100%;
     }
+  }
+
+
+  /* Responsiveness for Dads Phone */
+  @media only screen and (max-width: 380px) {
+    .resume-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .bullets {
+      width: 90%;
+    }
+
+    .resume-screen-container {
+      height: 370px;
+      padding: 0;
+      width: fit-content;
+      font-size: small;
+    }
+
+    .experience-container {
+      height: 420px;
+      padding: 0;
+      width: fit-content;
+      font-size: small;
+    }
+    .resume-bullet-details {
+      height: 370px;
+      padding: 0;
+      width: fit-content;
+      font-size: small;
+    }
+
+    .resume-heading {
+      margin: 20px 0 0 0;
+      font-size: 10px;
+    }
+    
+    .experience-description {
+      margin: -4px 0 0 0;
+      font-size: 10px;
+    }
+
+    .skills-description {
+      margin: 10px 0 0 0;
+      text-align: justify;
+    }
+
+    .resume-sub-heading {
+      font-size: 14px;
+      font-family: "Poppins SemiBold";
+      color: var(--black);
+      margin: 0px 0 0 0;
+    }
+
+    .programming-skills-container {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      margin: -15px 0 0 0;
+    }
+  
   }
