--- a/client/src/PortfolioContainer/Resume/Resume.css
+++ b/client/src/PortfolioContainer/Resume/Resume.css
@@ -114,8 +114,20 @@
     display: flex;
     justify-content: space-between;
   }
+
+  .project-main-heading {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+  }
   
   .resume-main-heading span {
+    color: var(--light-blue);
+    font-size: 16px;
+    font-family: "Poppins SemiBold";
+  }
+
+  .project-main-heading span {
     color: var(--light-blue);
     font-size: 16px;
     font-family: "Poppins SemiBold";
@@ -145,8 +157,20 @@
     color: var(--black);
     margin: 10px 0 0 0;
   }
+
+  .project-sub-heading {
+    font-size: 14px;
+    font-family: "Poppins SemiBold";
+    color: var(--black);
+    margin: 10px 0 0 0;
+  }
   
   .resume-heading-description {
+    font-size: 12px;
+    text-align: justify;
+  }
+
+  .project-heading-description {
     font-size: 12px;
     text-align: justify;
   }
@@ -240,9 +264,99 @@
     }
   }
 
+    /* Responsiveness for s20 */
+  @media only screen and (max-width: 415px) {
+    .resume-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .bullets {
+      width: 90%;
+    }
+
+    .resume-screen-container {
+      height: 370px;
+      padding: 0;
+      width: fit-content;
+      font-size: small;
+    }
+
+    .experience-container {
+      height: 420px;
+      padding: 0;
+      width: fit-content;
+      font-size: small;
+    }
+    .resume-bullet-details {
+      height: 370px;
+      padding: 0;
+      width: fit-content;
+      font-size: small;
+    }
+
+    .resume-heading {
+      margin: 20px 0 0 0;
+      font-size: 10px;
+    }
+    
+    .experience-description {
+      margin: -4px 0 0 0;
+      font-size: 10px;
+    }
+
+    .skills-description {
+      margin: 10px 0 0 0;
+      text-align: justify;
+    }
+
+    .resume-sub-heading {
+      font-size: 14px;
+      font-family: "Poppins SemiBold";
+      color: var(--black);
+      margin: 0px 0 0 0;
+    }
+
+    .programming-skills-container {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      margin: -15px 0 0 0;
+    }
+
+    .project-heading-description {
+      font-size: 12px;
+      text-align: justify;
+    }
+
+    .project-main-heading {
+      position: relative;
+      display: flex;
+      justify-content: space-between;
+      margin: -35px 0 0 0;
+
+    }
+
+    .project-sub-heading {
+      font-size: 12px;
+      font-family: "Poppins SemiBold";
+      color: var(--black);
+      margin: 1px 0 0 0;
+    }
+
+   
+  
+  }
+
+
+  
+
 
   /* Responsiveness for Dads Phone */
-  @media only screen and (max-width: 380px) {
+  @media only screen and (max-width: 375px) {
     .resume-content {
       display: flex;
       flex-direction: column;
